# EQilibrium

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
src/roomeq/: __init__.py  __main__.py  app.py
src/roomeq/core/: __init__.py  ai_agent.py  analysis.py  audio_device.py  averaging.py  biquad.py  eq_optimizer.py  export_formats.py  interface_profiles.py  measurement.py  rme_export.py  sweep.py
src/roomeq/session/: __init__.py
src/roomeq/ui/: wizard.py
src/roomeq/ui/pages/: __init__.py  analysis.py  device_setup.py  export.py  listening_position.py  measurement.py  welcome.py
src/roomeq/ui/widgets/: __init__.py  frequency_plot.py  level_meter.py  position_diagram.py
tests/: __init__.py  conftest.py  test_analysis.py  test_audio_device.py  test_averaging.py  test_biquad.py  test_eq_optimizer.py  test_export_formats.py  test_measurement.py  test_rme_export.py  test_sweep.py
